--- a/index.html
+++ b/index.html
@@ -3,43 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logbook Avsec</title>
+  <title>Web Saya</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Logbook Avsec</h1>
+  <header>
+    <h1>Selamat Datang di Web Saya</h1>
+    <p>Membuat tampilan web menarik dari GitHub</p>
+  </header>
 
-  <section>
-    <h2>Laporan Bulanan</h2>
-    <textarea rows="10" cols="50" placeholder="Tulis laporan bulanan di sini..."></textarea><br>
-    <button onclick="simpanLaporan()">Simpan Laporan</button>
-  </section>
+  <main>
+    <section class="hero">
+      <h2>Ini bagian utama</h2>
+      <p>Kamu bisa menaruh informasi penting di sini.</p>
+    </section>
 
-  <section>
-    <h2>Jadwal Dinas</h2>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Tanggal</th>
-          <th>Nama Petugas</th>
-          <th>Shift</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1 Juli 2025</td>
-          <td>Budi</td>
-          <td>Pagi</td>
-        </tr>
-        <tr>
-          <td>2 Juli 2025</td>
-          <td>Sinta</td>
-          <td>Malam</td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+    <section class="konten">
+      <h3>Fitur Web</h3>
+      <ul>
+        <li>Desain responsif</li>
+        <li>Mudah diakses</li>
+        <li>Gratis lewat GitHub Pages</li>
+      </ul>
+    </section>
+  </main>
 
-  <script src="script.js"></script>
+  <footer>
+    <p>© 2025 Web oleh Hartanto</p>
+  </footer>
 </body>
 </html>
