--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Web Saya</title>
   <link rel="stylesheet" href="style.css">
 </head>
+  <script src="script.js"></script>
 <body>
   <header>
     <h1>Selamat Datang di Web Saya</h1>
