--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1>Selamat Datang di Web Saya</h1>
     <p>Membuat tampilan web menarik dari GitHub</p>
   </header>
-
+<button id="btnSimpanPDF" class="pdf-button">
+  💾 Simpan ke PDF
+</button>
   <main>
     <section class="hero">
       <h2>Ini bagian utama</h2>
