--- a/index.html
+++ b/index.html
@@ -34,5 +34,22 @@
   <footer>
     <p>© 2025 Web oleh Hartanto</p>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+<script>
+  document.getElementById("btnSimpanPDF").addEventListener("click", function () {
+    const elemenCetak = document.getElementById("isi-laporan") || document.body;
+
+    const opsi = {
+      margin: 0.5,
+      filename: 'laporan-avsec.pdf',
+      image: { type: 'jpeg', quality: 0.98 },
+      html2canvas: { scale: 2 },
+      jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+    };
+
+    html2pdf().set(opsi).from(elemenCetak).save();
+  });
+</script>
+
 </body>
 </html>
