--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     html2pdf().set(opsi).from(elemenCetak).save();
   });
 </script>
+<button id="btnSimpanPDF" class="pdf-button">
+  💾 Simpan ke PDF
+</button>
 
 </body>
 </html>
