--- a/index.html
+++ b/index.html
@@ -43,12 +43,9 @@
     <p>Membuat tampilan web menarik dari GitHub</p>
   </header>
 
-  <!-- Tombol 1 -->
   <button id="btnSimpanPDF1" class="pdf-button">
     💾 Simpan Laporan
   </button>
-
-  <!-- Tombol 2 -->
   <button id="btnSimpanPDF2" class="pdf-button">
     📄 Simpan Ringkasan
   </button>
@@ -78,10 +75,8 @@
     <p>© 2025 Web oleh Hartanto</p>
   </footer>
 
-  <!-- Library html2pdf -->
+  <!-- Script PDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-
-  <!-- Script tombol -->
   <script>
     document.getElementById("btnSimpanPDF1").addEventListener("click", function () {
       const elemen1 = document.getElementById("isi-laporan");
@@ -93,5 +88,8 @@
       html2pdf().from(elemen2).save("ringkasan-avsec.pdf");
     });
   </script>
+
+  <!-- Script eksternal -->
+  <script src="script.js"></script>
 </body>
 </html>
