--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Saya</title>
+  <title>Aviation Security</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -87,16 +87,12 @@
 </head>
 <body>
   <header>
-    <h1>Selamat Datang di Web Saya</h1>
-    <p>Membuat tampilan web menarik dari GitHub</p>
+    <h1>Selamat Datang di Aviation Security</h1>
+    <p>Bandar Udara Rembele</p>
   </header>
 
   <button id="btnSimpanPDF1" class="pdf-button">
     💾 Simpan Laporan
-  </button>
-
-  <button id="btnSimpanPDF2" class="pdf-button">
-    📄 Simpan Ringkasan
   </button>
 
   <main>
@@ -177,7 +173,9 @@
       const elemen2 = document.getElementById("isi-ringkasan");
       html2pdf().from(elemen2).save("ringkasan-avsec.pdf");
     });
-  </script>
+    <button id="btnSimpanPDF2" class="pdf-button">
+    📄 Simpan Ringkasan
+  </button>
 
   <script src="script.js"></script>
 </body>
