--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
       <p>Ini adalah ringkasan dari fitur web sederhana ini.</p>
     </section>
   </main>
+<!-- Tombol PDF di bawah -->
+<div style="text-align: center; margin: 2em 0;">
+  <button id="btnSimpanPDF1bawah" class="pdf-button">
+    💾 Simpan Laporan
+  </button>
+  <button id="btnSimpanPDF2bawah" class="pdf-button">
+    📄 Simpan Ringkasan
+  </button>
+</div>
 
   <footer>
     <p>© 2025 Web oleh Hartanto</p>
