--- a/index.html
+++ b/index.html
@@ -73,108 +73,4 @@
     table th, table td {
       border: 1px solid #555;
       padding: 8px;
-      text-align: left;
-    }
-
-    table thead {
-      background-color: #333;
-    }
-
-    h4 {
-      margin-top: 1em;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Selamat Datang di Aviation Security</h1>
-    <p>Bandar Udara Rembele</p>
-  </header>
-
-  <!-- Tombol PDF -->
-  <button id="btnSimpanPDF1" class="pdf-button">
-    💾 Simpan Laporan
-  </button>
-  <button id="btnSimpanPDF2" class="pdf-button">
-    📄 Simpan Ringkasan
-  </button>
-
-  <main>
-    <section class="hero">
-      <h2>Ini bagian utama</h2>
-      <p>Kamu bisa menaruh informasi penting di sini.</p>
-    </section>
-
-    <section class="konten" id="isi-laporan">
-      <h3>Fitur Web</h3>
-      <form class="checklist">
-        <label><input type="checkbox" checked> Desain responsif</label>
-        <label><input type="checkbox"> Mudah diakses</label>
-        <label><input type="checkbox"> Gratis lewat GitHub Pages</label>
-      </form>
-
-      <h4>Data Personil Aviation Security<br>
-      Bandar Udara Rembele - Mei 2025</h4>
-
-      <div style="overflow-x: auto;">
-        <table>
-          <thead>
-            <tr>
-              <th>No</th>
-              <th>Nama</th>
-              <th>NIP</th>
-              <th>Jabatan</th>
-              <th>Status Kepegawaian</th>
-              <th>Nomor Lisensi</th>
-              <th>Tanggal Pengesahan</th>
-              <th>Masa Berlaku</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Data personil (dipotong untuk ringkasan) -->
-            <tr><td>1</td><td>Munawari</td><td>19830703 200801 1 010</td><td>Senior Avsec</td><td>PNS</td><td>016353/AS-S/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <!-- Lanjutkan hingga baris ke-19 seperti sebelumnya -->
-          </tbody>
-        </table>
-      </div>
-    </section>
-
-    <section class="konten" id="isi-ringkasan">
-      <h3>Ringkasan Singkat</h3>
-      <p>Ini adalah ringkasan dari fitur web sederhana ini.</p>
-    </section>
-  </main>
-<!-- Tombol PDF di bawah -->
-<div style="text-align: center; margin: 2em 0;">
-  <button id="btnSimpanPDF1bawah" class="pdf-button">
-    💾 Simpan Laporan
-  </button>
-  <button id="btnSimpanPDF2bawah" class="pdf-button">
-    📄 Simpan Ringkasan
-  </button>
-</div>
-
-  <footer>
-    <p>© 2025 Web oleh Hartanto</p>
-  </footer>
-
-  <!-- Library html2pdf -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-
-  <!-- Script Simpan PDF -->
-  <script>
-    document.getElementById("btnSimpanPDF1").addEventListener("click", function () {
-      const elemen1 = document.getElementById("isi-laporan");
-      html2pdf().from(elemen1).save("laporan-avsec.pdf");
-    });
-
-    document.getElementById("btnSimpanPDF2").addEventListener("click", function () {
-      const elemen2 = document.getElementById("isi-ringkasan");
-      html2pdf().from(elemen2).save("ringkasan-avsec.pdf");
-    });
-  </script>
-
-  <!-- Tambahkan script eksternal jika perlu -->
-  <script src="script.js"></script>
-</body>
-</html>
+      text-align
