--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aviation Security</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       background-color: #000;
@@ -73,4 +72,115 @@
     table th, table td {
       border: 1px solid #555;
       padding: 8px;
-      text-align
+      text-align: left;
+    }
+
+    table thead {
+      background-color: #333;
+    }
+
+    h4 {
+      margin-top: 1em;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Selamat Datang di Aviation Security</h1>
+    <p>Bandar Udara Rembele</p>
+  </header>
+
+  <div style="text-align: center;">
+    <button id="btnSimpanPDF1" class="pdf-button">💾 Simpan Laporan</button>
+    <button id="btnSimpanPDF2" class="pdf-button">📄 Simpan Ringkasan</button>
+  </div>
+
+  <main>
+    <section class="hero">
+      <h2>Ini bagian utama</h2>
+      <p>Kamu bisa menaruh informasi penting di sini.</p>
+    </section>
+
+    <section class="konten" id="isi-laporan">
+      <h3>Fitur Web</h3>
+      <form class="checklist">
+        <label><input type="checkbox" checked> Desain responsif</label>
+        <label><input type="checkbox"> Mudah diakses</label>
+        <label><input type="checkbox"> Gratis lewat GitHub Pages</label>
+      </form>
+
+      <h4>Data Personil Aviation Security<br>Bandar Udara Rembele - Mei 2025</h4>
+
+      <div style="overflow-x: auto;">
+        <table>
+          <thead>
+            <tr>
+              <th>No</th>
+              <th>Nama</th>
+              <th>NIP</th>
+              <th>Jabatan</th>
+              <th>Status Kepegawaian</th>
+              <th>Nomor Lisensi</th>
+              <th>Tanggal Pengesahan</th>
+              <th>Masa Berlaku</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>1</td><td>Munawari</td><td>19830703 200801 1 010</td><td>Senior Avsec</td><td>PNS</td><td>016353/AS-S/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>2</td><td>Nov Parmansyah</td><td>19861108 201012 1 002</td><td>Senior Avsec</td><td>PNS</td><td>019475/AS-S/DKP/XII/2021</td><td>2 Des 2021</td><td>2 Des 2023</td></tr>
+            <tr><td>3</td><td>Junaidi Isma</td><td>19750408 201001 1 004</td><td>Junior Avsec</td><td>PNS</td><td>020458/AS-J/DKP/VIII/2024</td><td>21 Ags 2024</td><td>21 Ags 2026</td></tr>
+            <tr><td>4</td><td>Hartanto</td><td>19851124 201801 1 001</td><td>Junior Avsec</td><td>PNS</td><td>025587/AS-J/DKP/IX/2023</td><td>29 Sep 2023</td><td>29 Sep 2025</td></tr>
+            <tr><td>5</td><td>Nabilah Ifra</td><td>20030930 202310 2 001</td><td>Junior Avsec</td><td>PNS</td><td>020529/AS-J/DKP/VII/2023</td><td>10 Jul 2023</td><td>10 Jul 2025</td></tr>
+            <tr><td>6</td><td>Kurniawan Ridha</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016357/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>7</td><td>Riza Darmawan</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>004184/AS-B/DKP/XI/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
+            <tr><td>8</td><td>Rezkina Putraga</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>004190/AS-B/DKP/XI/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
+            <tr><td>9</td><td>Kurnia Berlian</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016358/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>10</td><td>Zakiansyah</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016368/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>11</td><td>Fauzan</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>005290/AS-B/DKP/XII/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
+            <tr><td>12</td><td>Yusri Irada</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>005294/AS-B/DKP/XII/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
+            <tr><td>13</td><td>Juriansyah</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016356/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>14</td><td>Wanromi Triyanto</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016362/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>15</td><td>Fauzi Risa</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016359/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>16</td><td>Iwan Mahdame</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016361/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>17</td><td>Aminah Zuriah</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016369/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
+            <tr><td>18</td><td>Elvina Rasma. S</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>023953/AS-B/DKP/I/2023</td><td>27 Jan 2023</td><td>27 Jan 2025</td></tr>
+            <tr><td>19</td><td>Dermawan Ara</td><td>-</td><td>Petugas Avsec</td><td>Honorer</td><td>-</td><td>-</td><td>-</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <section class="konten" id="isi-ringkasan">
+      <h3>Ringkasan Singkat</h3>
+      <p>Ini adalah ringkasan dari fitur web sederhana ini.</p>
+    </section>
+  </main>
+
+  <div style="text-align: center; margin: 2em 0;">
+    <button id="btnSimpanPDF1bawah" class="pdf-button">💾 Simpan Laporan</button>
+    <button id="btnSimpanPDF2bawah" class="pdf-button">📄 Simpan Ringkasan</button>
+  </div>
+
+  <footer>
+    <p>© 2025 Web oleh Hartanto</p>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+  <script>
+    const saveLaporan = () => {
+      const elemen = document.getElementById("isi-laporan");
+      html2pdf().from(elemen).save("laporan-avsec.pdf");
+    };
+
+    const saveRingkasan = () => {
+      const elemen = document.getElementById("isi-ringkasan");
+      html2pdf().from(elemen).save("ringkasan-avsec.pdf");
+    };
+
+    document.getElementById("btnSimpanPDF1").addEventListener("click", saveLaporan);
+    document.getElementById("btnSimpanPDF2").addEventListener("click", saveRingkasan);
+    document.getElementById("btnSimpanPDF1bawah").addEventListener("click", saveLaporan);
+    document.getElementById("btnSimpanPDF2bawah").addEventListener("click", saveRingkasan);
+  </script>
+</body>
+</html>
