--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
   <header>
     <h1>Selamat Datang di Aviation Security</h1>
-    <p>Bandar Udara Rembele</p>
+    <p>BANDAR UDARA REMBELE</p>
   </header>
 
   <div style="text-align: center;">
@@ -98,7 +98,7 @@
   <main>
     <section class="hero">
       <h2>Ini bagian utama</h2>
-      <p>Kamu bisa menaruh informasi penting di sini.</p>
+      <p>Data Personel keamanan di Bandar Udara Rembele.</p>
     </section>
 
     <section class="konten" id="isi-laporan">
