--- a/index.html
+++ b/index.html
@@ -90,14 +90,9 @@
     <p>BANDAR UDARA REMBELE</p>
   </header>
 
-  <div style="text-align: center;">
-    <button id="btnSimpanPDF1" class="pdf-button">💾 Simpan Laporan</button>
-    <button id="btnSimpanPDF2" class="pdf-button">📄 Simpan Ringkasan</button>
-  </div>
-
   <main>
     <section class="hero">
-      <h2>Ini bagian utama</h2>
+      <h2>KAMPEN</h2>
       <p>Data Personel keamanan di Bandar Udara Rembele.</p>
     </section>
 
@@ -109,7 +104,7 @@
         <label><input type="checkbox"> Gratis lewat GitHub Pages</label>
       </form>
 
-      <h4>Data Personil Aviation Security<br>Bandar Udara Rembele - Mei 2025</h4>
+      <h4>Data Personil Aviation Security<br>Bandar Udara Rembele - Update 2025</h4>
 
       <div style="overflow-x: auto;">
         <table>
