--- a/index.html
+++ b/index.html
@@ -1,181 +1,89 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aviation Security</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: sans-serif;
-    }
-
-    header {
-      background-color: #1565c0;
-      color: white;
-      text-align: center;
-      padding: 2em;
-    }
-
-    .pdf-button {
-      background-color: #1565c0;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      margin: 10px 5px;
-    }
-
-    .pdf-button:hover {
-      background-color: #0d47a1;
-    }
-
-    .checklist {
-      padding: 1em;
-    }
-
-    .checklist label {
-      display: block;
-      margin-bottom: 0.5em;
-      font-size: 16px;
-    }
-
-    .checklist input[type="checkbox"] {
-      margin-right: 8px;
-      transform: scale(1.2);
-    }
-
-    section.konten {
-      background-color: #111;
-      padding: 1.5em;
-      border-radius: 12px;
-      margin: 1em;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1em;
-      font-size: 14px;
-      color: #aaa;
-    }
-
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      background-color: #222;
-      color: white;
-    }
-
-    table th, table td {
-      border: 1px solid #555;
-      padding: 8px;
-      text-align: left;
-    }
-
-    table thead {
-      background-color: #333;
-    }
-
-    h4 {
-      margin-top: 1em;
-    }
-  </style>
+  <title>Logbook AVSEC</title>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Selamat Datang di Aviation Security</h1>
-    <p>BANDAR UDARA REMBELE</p>
-  </header>
+  <h2>Logbook AVSEC</h2>
 
-  <main>
-    <section class="hero">
-      <h2>KAMPEN</h2>
-      <p>Data Personel keamanan di Bandar Udara Rembele.</p>
-    </section>
-
-    <section class="konten" id="isi-laporan">
-      <h3>Fitur Web</h3>
-      <form class="checklist">
-        <label><input type="checkbox" checked> Desain responsif</label>
-        <label><input type="checkbox"> Mudah diakses</label>
-        <label><input type="checkbox"> Gratis lewat GitHub Pages</label>
-      </form>
-
-      <h4>Data Personil Aviation Security<br>Bandar Udara Rembele - Update 2025</h4>
-
-      <div style="overflow-x: auto;">
-        <table>
-          <thead>
-            <tr>
-              <th>No</th>
-              <th>Nama</th>
-              <th>NIP</th>
-              <th>Jabatan</th>
-              <th>Status Kepegawaian</th>
-              <th>Nomor Lisensi</th>
-              <th>Tanggal Pengesahan</th>
-              <th>Masa Berlaku</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>1</td><td>Munawari</td><td>19830703 200801 1 010</td><td>Senior Avsec</td><td>PNS</td><td>016353/AS-S/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>2</td><td>Nov Parmansyah</td><td>19861108 201012 1 002</td><td>Senior Avsec</td><td>PNS</td><td>019475/AS-S/DKP/XII/2021</td><td>2 Des 2021</td><td>2 Des 2023</td></tr>
-            <tr><td>3</td><td>Junaidi Isma</td><td>19750408 201001 1 004</td><td>Junior Avsec</td><td>PNS</td><td>020458/AS-J/DKP/VIII/2024</td><td>21 Ags 2024</td><td>21 Ags 2026</td></tr>
-            <tr><td>4</td><td>Hartanto</td><td>19851124 201801 1 001</td><td>Junior Avsec</td><td>PNS</td><td>025587/AS-J/DKP/IX/2023</td><td>29 Sep 2023</td><td>29 Sep 2025</td></tr>
-            <tr><td>5</td><td>Nabilah Ifra</td><td>20030930 202310 2 001</td><td>Junior Avsec</td><td>PNS</td><td>020529/AS-J/DKP/VII/2023</td><td>10 Jul 2023</td><td>10 Jul 2025</td></tr>
-            <tr><td>6</td><td>Kurniawan Ridha</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016357/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>7</td><td>Riza Darmawan</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>004184/AS-B/DKP/XI/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
-            <tr><td>8</td><td>Rezkina Putraga</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>004190/AS-B/DKP/XI/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
-            <tr><td>9</td><td>Kurnia Berlian</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016358/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>10</td><td>Zakiansyah</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016368/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>11</td><td>Fauzan</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>005290/AS-B/DKP/XII/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
-            <tr><td>12</td><td>Yusri Irada</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>005294/AS-B/DKP/XII/2019</td><td>25 Okt 2021</td><td>25 Okt 2023</td></tr>
-            <tr><td>13</td><td>Juriansyah</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016356/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>14</td><td>Wanromi Triyanto</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016362/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>15</td><td>Fauzi Risa</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016359/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>16</td><td>Iwan Mahdame</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016361/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>17</td><td>Aminah Zuriah</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>016369/AS-B/DKP/VI/2021</td><td>25 Jun 2021</td><td>25 Jun 2023</td></tr>
-            <tr><td>18</td><td>Elvina Rasma. S</td><td>-</td><td>Basic Avsec</td><td>Honorer</td><td>023953/AS-B/DKP/I/2023</td><td>27 Jan 2023</td><td>27 Jan 2025</td></tr>
-            <tr><td>19</td><td>Dermawan Ara</td><td>-</td><td>Petugas Avsec</td><td>Honorer</td><td>-</td><td>-</td><td>-</td></tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
-
-    <section class="konten" id="isi-ringkasan">
-      <h3>Ringkasan Singkat</h3>
-      <p>Ini adalah ringkasan dari fitur web sederhana ini.</p>
-    </section>
-  </main>
-
-  <div style="text-align: center; margin: 2em 0;">
-    <button id="btnSimpanPDF1bawah" class="pdf-button">💾 Simpan Laporan</button>
-    <button id="btnSimpanPDF2bawah" class="pdf-button">📄 Simpan Ringkasan</button>
+  <!-- Login Section -->
+  <div id="login-section">
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button onclick="login()">Login</button>
+    <p id="login-status"></p>
   </div>
 
-  <footer>
-    <p>© 2025 Web oleh Hartanto</p>
-  </footer>
+  <!-- Logbook Section -->
+  <div id="logbook-section" style="display:none;">
+    <p>Halo, <span id="user-email"></span></p>
+    <input type="date" id="tanggal"><br>
+    <input type="text" id="kegiatan" placeholder="Kegiatan"><br>
+    <input type="text" id="petugas" placeholder="Nama Petugas"><br>
+    <button onclick="kirimLogbook()">Kirim</button><br><br>
+    <button onclick="logout()">Logout</button>
+    <p id="submit-status"></p>
+  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
   <script>
-    const saveLaporan = () => {
-      const elemen = document.getElementById("isi-laporan");
-      html2pdf().from(elemen).save("laporan-avsec.pdf");
+    // Ganti konfigurasi ini dengan milikmu sendiri dari Firebase Console
+    const firebaseConfig = {
+      apiKey: "API_KEY_KAMU",
+      authDomain: "PROJECT_ID.firebaseapp.com",
+      projectId: "PROJECT_ID",
+      storageBucket: "PROJECT_ID.appspot.com",
+      messagingSenderId: "SENDER_ID",
+      appId: "APP_ID"
     };
 
-    const saveRingkasan = () => {
-      const elemen = document.getElementById("isi-ringkasan");
-      html2pdf().from(elemen).save("ringkasan-avsec.pdf");
-    };
+    // Inisialisasi Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-    document.getElementById("btnSimpanPDF1").addEventListener("click", saveLaporan);
-    document.getElementById("btnSimpanPDF2").addEventListener("click", saveRingkasan);
-    document.getElementById("btnSimpanPDF1bawah").addEventListener("click", saveLaporan);
-    document.getElementById("btnSimpanPDF2bawah").addEventListener("click", saveRingkasan);
+    // Login Function
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      auth.signInWithEmailAndPassword(email, password)
+        .then(userCredential => {
+          document.getElementById("login-section").style.display = "none";
+          document.getElementById("logbook-section").style.display = "block";
+          document.getElementById("user-email").innerText = email;
+        })
+        .catch(error => {
+          document.getElementById("login-status").innerText = "Login gagal: " + error.message;
+        });
+    }
+
+    // Submit Logbook
+    function kirimLogbook() {
+      const tanggal = document.getElementById("tanggal").value;
+      const kegiatan = document.getElementById("kegiatan").value;
+      const petugas = document.getElementById("petugas").value;
+
+      db.collection("logbook").add({
+        tanggal: tanggal,
+        kegiatan: kegiatan,
+        petugas: petugas,
+        waktuInput: new Date()
+      }).then(() => {
+        document.getElementById("submit-status").innerText = "Logbook berhasil dikirim!";
+      }).catch((error) => {
+        document.getElementById("submit-status").innerText = "Gagal kirim: " + error.message;
+      });
+    }
+
+    // Logout Function
+    function logout() {
+      auth.signOut().then(() => {
+        document.getElementById("logbook-section").style.display = "none";
+        document.getElementById("login-section").style.display = "block";
+      });
+    }
   </script>
 </body>
 </html>
